--- a/.github/workflows/wakatime.yml
+++ b/.github/workflows/wakatime.yml
@@ -15,4 +15,6 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           TIME_RANGE: last_30_days
+          SHOW_TITLE: true
           SHOW_TIME: true
+          BLOCKS: ⣀⣄⣤⣦⣶⣷⣿
